Genre service, dtos and mapper profile

--- a/spr421_spotify_clone.BLL/spr421_spotify_clone.BLL.csproj
+++ b/spr421_spotify_clone.BLL/spr421_spotify_clone.BLL.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\spr421_spotify_clone.DAL\spr421_spotify_clone.DAL.csproj" />
   </ItemGroup>
 
