Create track method

--- a/spr421_spotify_clone/spr421_spotify_clone.csproj
+++ b/spr421_spotify_clone/spr421_spotify_clone.csproj
@@ -19,4 +19,9 @@
     <ProjectReference Include="..\spr421_spotify_clone.DAL\spr421_spotify_clone.DAL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="storage\audio\" />
+    <Folder Include="storage\images\" />
+  </ItemGroup>
+
 </Project>
