--- a/front/package.json
+++ b/front/package.json
@@ -21,6 +21,7 @@
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-h5-audio-player": "^3.10.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
     "yup": "^1.7.1"
