--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "react-h5-audio-player": "^3.10.1",
     "react-redux": "^9.2.0",
     "react-router": "^7.9.3",
+    "react-toastify": "^11.0.5",
     "yup": "^1.7.1"
   },
   "devDependencies": {
